# ralf-blender

./: .gitignore  README.md  pyproject.toml
blender/: __init__.py  config_generator.py  pipeline.py
